Fix critical architecture & FE-BE integration issues
Critical Architectural Fixes:
- Remove cross-module dependency violation in NotificationProviderClient
  - Removed UserService import
  - Pass userEmail through domain events instead
  - Added userEmail to all domain events (Reservation*, Payment*, Space* events)
  - Update all event publishers to include user email

Security & Configuration:
- Register JwtAuthenticationFilter in SecurityConfig filter chain
- Make CORS configurable via environment variables
- Externalize sensitive Gmail credentials to environment variables
- Add payment mock-mode flag for development/production switch
- Add security headers and MaxAge for CORS

Notification System:
- Add listener for UserRegisteredEvent (welcome emails)
- Update all notification handlers to use email from events (not service call)
- Improve email message formatting with EUR currency display
- Add null-safety checks for user emails

Billing System:
- Add billing logging and status tracking
- Improve payment processor stub with proper error handling
- Add support for EV charging cost calculation
- Add reservationId field to Invoice entity
- Fix invoice state machine (PENDING -> PAID)
- Add currency default to EUR
- Properly handle mixed parking + EV charging costs

Reservation System:
- Add userEmail field to Reservation entity
- Pass email through event chain for notifications
- Improve error handling with log statements

Code Quality:
- Translate all Dutch comments to English in UserController and SecurityConfig
- Add logging statements for audit trail
- Improve code documentation with TODOs for payment integration
- Add proper imports organization

Configuration:
- Add app.cors.allowed-origins to application.yaml
- Add app.payment.mock-mode flag
- Externalize all mail configuration
- Add table name annotations (@Table)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>