@@ -1,5 +1,8 @@
 package com.parking;
 
+import com.parking.usermanagement.internal.JwtAuthenticationFilter;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpStatus;
@@ -7,57 +10,64 @@ import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.HttpStatusEntryPoint;
-import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
 
-    // Voor nu even gehardcodeerd voor het gemak
-    private final String frontendUrl = "http://localhost:5173";
+    @Value("${app.cors.allowed-origins:http://localhost:5173}")
+    private String allowedOrigins;
+
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                // 1. Schakel CORS in (gebruikt de bean onderaan)
+                // Enable CORS
                 .cors(cors -> {})
 
-                // 2. CSRF: We gebruiken een cookie die SvelteKit kan lezen
+                // Disable CSRF for API endpoints
                 .csrf(csrf -> csrf.disable())
 
-                // 3. Geen standaard inlogschermen of basic auth
+                // Disable form login and basic auth
                 .formLogin(form -> form.disable())
                 .httpBasic(basic -> basic.disable())
 
-                // 4. Toegangsregels
+                // Authorization rules
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/api/users/login", "/api/users/register", "/api/zones/**").permitAll()
                         .anyRequest().authenticated()
                 )
 
-                // 5. Sessiebeheer (Zorg dat dit NIET stateless is!)
+                // Session management
                 .sessionManagement(session -> session
                         .maximumSessions(1)
                 )
 
-                // 6. Error handling: Stuur 401 terug i.p.v. een redirect naar een loginpagina
+                // Error handling - return 401 instead of redirect to login page
                 .exceptionHandling(e -> e
                         .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
                 )
 
-                // 7. Logout
+                // Logout
                 .logout(logout -> logout
                         .logoutRequestMatcher(new AntPathRequestMatcher("/api/users/logout", "POST"))
                         .invalidateHttpSession(true)
                         .deleteCookies("JSESSIONID", "XSRF-TOKEN")
                         .logoutSuccessHandler((req, res, auth) -> res.setStatus(HttpStatus.OK.value()))
-                );
+                )
+
+                // Add JWT filter before username/password authentication
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -67,10 +77,15 @@ public class SecurityConfig {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowCredentials(true); // Verplicht voor SessionID/Cookies
-        config.setAllowedOrigins(List.of(frontendUrl));
+        config.setAllowCredentials(true);
+
+        // Parse comma-separated origins
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        config.setAllowedOrigins(origins);
+
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-XSRF-TOKEN", "Accept"));
+        config.setMaxAge(3600L);
 
         source.registerCorsConfiguration("/**", config);
         return new CorsFilter(source);
